@@ -10,34 +10,3 @@ nodist_noinst_HEADERS = \
 	config-internal-compiler.h \
 	config-internal-libpq.h
 
-nodist_include_HEADERS = \
-	config-public-compiler.h
-
-include_HEADERS= pqxx all.h \
-	binarystring binarystring.hxx \
-	cachedresult.h \
-	connection connection.hxx connection.h \
-	connection_base connection_base.hxx connection_base.h connectionitf.h \
-	cursor cursor.hxx cursor.h \
-	dbtransaction dbtransaction.hxx dbtransaction.h \
-	except except.hxx except.h \
-	isolation isolation.hxx isolation.h \
-	largeobject largeobject.hxx largeobject.h \
-	libcompiler.h \
-	libpq-forward.hxx \
-	nontransaction nontransaction.hxx nontransaction.h \
-	pipeline pipeline.hxx \
-	result result.hxx result.h \
-	robusttransaction robusttransaction.hxx robusttransaction.h \
-	subtransaction subtransaction.hxx \
-	tablereader tablereader.hxx tablereader.h \
-	tablestream tablestream.hxx tablestream.h \
-	tablewriter tablewriter.hxx tablewriter.h \
-	transaction transaction.hxx transaction.h \
-	transaction_base transaction_base.hxx transaction_base.h \
-	transactionitf.h \
-	transactor transactor.hxx transactor.h \
-	trigger trigger.hxx trigger.h \
-	util util.hxx util.h
-
-
