@@ -1,5 +1,6 @@
 2.6.2
  - Bug fix: connection state was not set up properly in some common cases
+ - Bug fix: headers were installed in "include" instead of "include/pqxx"
  - namedclass is now used as a virtual base; affects all subclass constructors
  - Initial implementation of subtransactions
  - Detect more connection capabilities
